--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,9 @@
 
 
 <string name="search_text">Search...</string>
+<string name="new_trans">New Transaction</string>
+<string name="settings">Settings</string>
+<string name="transfer">New Transfer</string>
+<string name="sort">Sort</string>
+
 </resources>
