--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
 
 
 <string name="search_text">Search...</string>
-<string name="new_trans">New Transaction</string>
+<string name="new_trans">New Entry</string>
 <string name="settings">Settings</string>
 <string name="transfer">New Transfer</string>
 <string name="sort">Sort</string>
@@ -17,4 +17,11 @@
 <string name="acct_bal">Initial Balance:</string>
 <string name="save">Save</string>
 <string name="cancel">Cancel</string>
+<string name="account_edit">Edit</string>
+<string name="account_del">Delete</string>
+<string name="yes">Yes</string>
+<string name="no">No</string>
+<string name="account_del_box">Delete Account</string>
+
+<string name="about">About</string>
 </resources>
