transactions added to listview once committed to database balances updated once transaction edits and return to account activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,4 +25,7 @@
 
 <string name="about">About</string>
 <string name="copy">Copy</string>
+<string name="trans_posted">Posted</string>
+<string name="trans_budget">Budget</string>
+<string name="trans_balance">Balance</string>
 </resources>
