added search bar to transaction list layout added sorting for transaction list

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,4 +28,5 @@
 <string name="trans_posted">Posted</string>
 <string name="trans_budget">Budget</string>
 <string name="trans_balance">Balance</string>
+<string name="sort_column">Sort Column</string>
 </resources>
