--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,4 +39,5 @@
 <string name="invalid">Invalid PIN</string>
 <string name="update">There is an update available for this application. Please download it from the Android Market.</string>
 
+<string name="post">Post</string>
 </resources>
