--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,4 +40,5 @@
 <string name="update">There is an update available for this application. Please download it from the Android Market.</string>
 
 <string name="post">Post</string>
+<string name="acct_priority">Display Priority:</string>
 </resources>
