--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -56,4 +56,7 @@
 <string name="restore_failed">Database could not be restored from the SD card.</string>
 <string name="backing_up">Backing up the database. This may take a while.</string>
 <string name="restoring">Restoring the database. This may take a while.</string>
+<string name="new_version">You have upgraded to a new version of loot. If you encounter any bugs, please email me at christopher.mccurdy@gmail.com with what you were doing at the time. Also, please feel free to donate to me through PayPal. Would you like to donate now?</string>
+<string name="donate_location">You can always donate at a later time by going to \&quot;Settings\&quot;, choosing \&quot;About\&quot;, and clicking on the donation button.</string>
+<string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=1368357</string>
 </resources>
