added added export to main menu, launches export activity if it exists

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -81,4 +81,6 @@
 	<string name="premium_disabled_title">Premium Disabled</string>
 	<string name="premium_disabled_body">You must purchase the loot premium package in order
 		to access these settings.</string>
+	<string name="export">Export</string>
+<string name="import_">Import</string>
 </resources>
