added charting menu items fixed text for custom background colors

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -82,5 +82,6 @@
 	<string name="premium_disabled_body">You must purchase the loot premium package in order
 		to access these settings.</string>
 	<string name="export">Export</string>
-<string name="import_">Import</string>
+    <string name="import_">Import</string>
+    <string name="chart">Chart</string>
 </resources>
