added repeat manager interface; still needs edit and delete functions, possibly increase the text size

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -125,4 +125,5 @@
 	<string name="primary_label">Primary Account</string>
 	<string name="keyboard_style">On-Screen Keyboard Style</string>
 	<string name="keyboard_style_message">Choose the style of the on-screen keyboard.</string>
+	<string name="repeat_manager">Manage Repeats</string>
 </resources>
