--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
 	<string name="new_trans">New Entry</string>
 	<string name="settings">Settings</string>
 	<string name="transfer">New Transfer</string>
+	<string name="trans">Transfer</string>
 	<string name="sort">Sort</string>
 	<string name="search">Search</string>
 	<string name="purge">Purge</string>
