added ability to add images to transaction edits and view images

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -138,4 +138,5 @@
 	   dd - 2 digit day\n
 	</string>
 	<string name="receipts">Receipts</string>
+	<string name="attach_receipt">Attach Receipt</string>
 </resources>
