finished incorporating the receipt function

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -139,4 +139,5 @@
 	</string>
 	<string name="receipts">Receipts</string>
 	<string name="attach_receipt">Attach Receipt</string>
+	<string name="view_receipts">View Receipts</string>
 </resources>
