--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -167,4 +167,5 @@
     <string name="credit">Credit</string>
     <string name="debit">Debit</string>
     <string name="credit_limit">Credit Limit</string>
+    <string name="sync">Sync</string>
 </resources>
